--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "semantic-ui-css": "^2.2.12",
     "semantic-ui-react": "^0.74.2"
   },
+  "proxy": "http://localhost:5000",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
