--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "filehub",
-  "version": "0.1.0",
+  "name": "kijenzi-kipakiaji",
+  "version": "0.2.0",
   "private": true,
   "dependencies": {
     "body-parser": "^1.18.2",
